# wheebot_ws

./: .gitignore  README.md
src/wheebot_bringup/: CMakeLists.txt  package.xml
src/wheebot_bringup/launch/: robot.launch.py  simulation.launch.py
src/wheebot_controller/: CMakeLists.txt  package.xml
src/wheebot_controller/config/: joy_config.yaml  joy_teleop.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml  wheebot_controllers.yaml
src/wheebot_controller/include/wheebot_controller/: simple_controller.hpp
src/wheebot_controller/launch/: controller.launch.py  joystick_teleop.launch.py
src/wheebot_controller/src/: simple_controller.cpp  twist_relay.cpp
src/wheebot_controller/wheebot_controller/: simple_controller.py  twist_relay.py
src/wheebot_cpp_examples/: CMakeLists.txt  package.xml
src/wheebot_cpp_examples/include/wheebot_cpp_examples/: simple_tf_kinematics.hpp  simple_turtlesim_kinematics.hpp
src/wheebot_cpp_examples/src/: simple_parameter.cpp  simple_publisher.cpp  simple_subscriber.cpp  simple_tf_kinematics.cpp  simple_turtlesim_kinematics.cpp
src/wheebot_description/: CMakeLists.txt  package.xml
src/wheebot_description/launch/: display.launch.py  gazebo.launch.py
src/wheebot_description/meshes/: wheebot_base_link.stl  wheebot_caster_fork_link.stl  wheebot_caster_wheel_link.stl  wheebot_wheel_link.stl
src/wheebot_description/rviz/: display.rviz
src/wheebot_description/urdf/: temp.txt  wheebot.urdf.xacro  wheebot_gazebo.xacro  wheebot_ros2_control.xacro
src/wheebot_firmware/: CMakeLists.txt  package.xml  wheebot_interface.xml
src/wheebot_firmware/firmware/robot_control/: robot_control.ino
src/wheebot_firmware/include/wheebot_firmware/: wheebot_interface.hpp
src/wheebot_firmware/launch/: hardware_interface.launch.py  sensor.launch.py
src/wheebot_firmware/src/: wheebot_interface.cpp
src/wheebot_firmware/wheebot_firmware/: mpu6050_driver.py
src/wheebot_localization/: CMakeLists.txt  package.xml
src/wheebot_localization/config/: ekf.yaml
src/wheebot_localization/include/wheebot_localization/: kalman_filter.hpp
src/wheebot_localization/launch/: global_localization.launch.py  local_localization.launch.py  rtabmap_fused_odom.launch.py
src/wheebot_localization/rviz/: odometry_motion_model.rviz
src/wheebot_localization/src/: imu_republisher.cpp  kalman_filter.cpp  odometry_motion_model.cpp
src/wheebot_localization/wheebot_localization/: kalman_filter.py  odometry_motion_model.py
src/wheebot_mapping/: CMakeLists.txt  package.xml
src/wheebot_mapping/include/wheebot_mapping/: mapping_with_known_poses.hpp
src/wheebot_mapping/launch/: rtabmap_fused_slam.launch.py  rtabmap_fusion.launch.py  rtabmap_lidar.launch.py  rtabmap_realsense.launch.py  rtabmap_slam.launch.py  slam_toolbox.launch.py
src/wheebot_mapping/launch/temp/: rtabmap_odom_correction.launch.py  rtabmap_sensor_fusion.launch.py  rtabmap_test.launch.py  rtabmap_with_args.launch.py
src/wheebot_mapping/rviz/: rtabmap_slam.rviz
src/wheebot_mapping/src/: mapping_with_known_poses.cpp
src/wheebot_mapping/wheebot_mapping/: lidar_range.py
src/wheebot_motion/: CMakeLists.txt  motion_planner_plugins.xml  package.xml
src/wheebot_motion/include/wheebot_motion/: pd_motion_planner.hpp  pure_pursuit.hpp
src/wheebot_motion/src/: pd_motion_planner.cpp  pure_pursuit.cpp
src/wheebot_motion/wheebot_motion/: pure_pursuit.py
src/wheebot_navigation/: CMakeLists.txt  package.xml
src/wheebot_navigation/behavior_tree/: simple_navigation.xml  simple_navigation_w_replanning.xml  simple_navigation_w_replanning_and_recovery.xml
src/wheebot_navigation/config/: behavior_server.yaml  bt_navigator.yaml  controller_server.yaml  costmap.yaml  planner_server.yaml  smoother_server.yaml
src/wheebot_navigation/launch/: navigation.launch.py
src/wheebot_planning/: CMakeLists.txt  global_planner_plugins.xml  package.xml
src/wheebot_planning/include/wheebot_planning/: astar_planner.hpp  dijkstra_planner.hpp
src/wheebot_planning/src/: astar_planner.cpp  dijkstra_planner.cpp
src/wheebot_py_examples/: package.xml  setup.cfg  setup.py
src/wheebot_py_examples/wheebot_py_examples/: simple_parameter.py  simple_publisher.py  simple_subscriber.py  simple_tf_kinematics.py  simple_turtlesim_kinematics.py
src/wheebot_utils/: CMakeLists.txt  package.xml
src/wheebot_utils/results/: system_usage.csv
src/wheebot_utils/wheebot_utils/: image_saver.py  lidar_range.py
src/wheebot_utils/wheebot_utils/eval_metrics/: ate.py  iou.py  rdr.py  rmse.py  ssim.py
src/wheebot_utils/wheebot_utils/performance/: fps_logger.py  fps_plotter.py  performance_logger.py  performance_plotter.py
src/wheebot_vision/: package.xml  setup.cfg  setup.py
src/wheebot_vision/launch/: dor_pipeline.py  vision.launch.py
src/wheebot_vision/wheebot_vision/: camera_pub.py  camera_sub.py  depth_dor.py  depth_republisher.py  dynamic_object_removal.py  dynamic_object_removal_sync.py  full_system.py  obj_class.py  obj_det.py  obj_seg.py  object_classification.py  object_detection.py  object_detection_and_classification.py  pointcloud_republisher.py
src/wheebot_vision/wheebot_vision/temp/examples/: depth_dor.py  dor.py  inpainting.py  obj_class.py
src/wheebot_webui/: run.sh
src/wheebot_webui/backend/: http_server.py  main.py  node_core.py  run_backend.py
src/wheebot_webui/frontend/: app.js  index.html  style.css
